Fix wrap for IE (props Ryan Townley)

--- a/includes/css/display-featured-image-genesis.css
+++ b/includes/css/display-featured-image-genesis.css
@@ -18,6 +18,7 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
+	width: 100%;
 	z-index: 1;
 }
 
